@@ -19,6 +19,7 @@ import org.openqa.selenium.WebElement;
 import org.openqa.selenium.support.ui.WebDriverWait;
 
 import java.time.Duration;
+import java.util.Arrays;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashSet;
@@ -46,7 +47,7 @@ import java.util.stream.Collectors;
  * root is returned.
  * <p>
  * The element class specified in the constructor defines the tag name which is
- * searched for an also the type of element returned.
+ * searched for and also the type of element returned.
  */
 public class ElementQuery<T extends TestBenchElement> {
 
@@ -56,21 +57,30 @@ public class ElementQuery<T extends TestBenchElement> {
         private final String name;
         private final String operator;
         private final String value;
+        private final boolean negate;
+
+        public AttributeMatch(String name, String operator, String value) {
+            this.name = name;
+
+            String oper = null;
+            boolean neg = false;
+            if (operator != null) {
+                neg = operator.startsWith("!");
+                oper = neg ? operator.substring(1) : operator;
+                oper = oper.isEmpty() ? null : oper;
+            }
+
+            this.operator = oper;
+            this.value = value;
+            this.negate = neg;
+        }
 
         public AttributeMatch(String name, String value) {
             this(name, "=", value);
         }
 
-        public AttributeMatch(String name, String operator, String value) {
-            this.name = name;
-            this.operator = operator;
-            this.value = value;
-        }
-
         public AttributeMatch(String name) {
-            this.name = name;
-            operator = null;
-            value = null;
+            this(name, null, null);
         }
 
         @Override
@@ -79,14 +89,19 @@ public class ElementQuery<T extends TestBenchElement> {
         }
 
         public String getExpression() {
-            if (operator == null) {
-                // [disabled]
-                return "[" + name + "]";
-            } else {
-                // [type='text']
-                return "[" + name + operator + "'" + escapeAttributeValue(value)
-                        + "']";
+            String expression = name;
+
+            if (value != null) {
+                expression += operator + "'" + escapeAttributeValue(value) + "'";
             }
+
+            expression = "[" + expression + "]";
+
+            if (negate) {
+                expression = ":not(" + expression + ")";
+            }
+
+            return expression;
         }
 
         private static String escapeAttributeValue(String value) {
@@ -143,67 +158,252 @@ public class ElementQuery<T extends TestBenchElement> {
     }
 
     /**
-     * Executes a search for element with the given id.
-     *
-     * @param id
-     *            the id to look up
-     * @return the element with the given id
-     *
-     * @throws NoSuchElementException
-     *             if no element is found
-     */
-    public T id(String id) {
-        return attribute("id", id).first();
-    }
-
-    /**
-     * Requires the given attribute to be set.
+     * Selects on elements having the given attribute.
+     * <p>
+     *     Note, this attribute need not have a value.
+     * </p>
      *
      * @param name
      *            the attribute name
      * @return this element query instance for chaining
+     *
+     * @deprecated use {@link #withAttribute(String)}
      */
+    @Deprecated(since = "9.3")
     public ElementQuery<T> hasAttribute(String name) {
-        attributes.add(new AttributeMatch(name));
-        return this;
+        return withAttribute(name);
     }
 
     /**
-     * Requires the given attribute to match the given value.
+     * Selects on elements with the given attribute having the given value.
      * <p>
-     * For matching a token in the attribute, see
-     * {@link #attributeContains(String, String)}.
+     * For matching a token within the attribute, see
+     * {@link #withAttributeContaining(String, String)}.
      *
      * @param name
      *            the attribute name
      * @param value
      *            the attribute value
      * @return this element query instance for chaining
+     *
+     * @see #withAttributeContaining(String, String)
+     *
+     * @deprecated use {@link #withAttribute(String, String)}
      */
+    @Deprecated(since = "9.3")
     public ElementQuery<T> attribute(String name, String value) {
-        attributes.add(new AttributeMatch(name, value));
-        return this;
+        return withAttribute(name, value);
     }
 
     /**
-     * Requires the given attribute to contain the given value.
+     * Selects on elements with the given attribute containing the given token.
      * <p>
      * Compares with space separated tokens so that e.g.
-     * <code>attributeContains('class','myclass');</code> matches
+     * <code>attributeContains("class", "myclass");</code> matches
      * <code>class='someclass myclass'</code>.
      * <p>
      * For matching the full attribute value, see
-     * {@link #attribute(String, String)}.
+     * {@link #withAttribute(String, String)}.
      *
      * @param name
      *            the attribute name
      * @param token
      *            the token to look for
      * @return this element query instance for chaining
+     *
+     * @see #withAttribute(String, String)
+     *
+     * @deprecated use {@link #withAttributeContaining(String, String)}
      */
+    @Deprecated(since = "9.3")
     public ElementQuery<T> attributeContains(String name, String token) {
-        attributes.add(new AttributeMatch(name, "~=", token));
+        return withAttributeContaining(name, token);
+    }
+
+    /**
+     * Selects on elements having the given attribute.
+     * <p>
+     *     Note, this attribute need not have a value.
+     * </p>
+     *
+     * @param attribute
+     *            the attribute name
+     * @return this element query instance for chaining
+     */
+    public ElementQuery<T> withAttribute(String attribute) {
+        attributes.add(new AttributeMatch(attribute));
         return this;
+    }
+
+    /**
+     * Selects on elements with the given attribute having the given value.
+     * <p>
+     * For matching a token within the attribute, see
+     * {@link #withAttributeContaining(String, String)}.
+     * </p>
+     *
+     * @param attribute
+     *            the attribute name
+     * @param value
+     *            the attribute value
+     * @return this element query instance for chaining
+     *
+     * @see #withAttributeContaining(String, String)
+     */
+    public ElementQuery<T> withAttribute(String attribute, String value) {
+        attributes.add(new AttributeMatch(attribute, value));
+        return this;
+    }
+
+    /**
+     * Selects on elements with the given attribute containing the given token.
+     * <p>
+     * Compares with space separated tokens so that e.g.
+     * <code>withAttributeContaining("class", "myclass");</code> matches
+     * <code>class='someclass myclass'</code>.
+     * <p>
+     * For matching the full attribute value, see
+     * {@link #withAttribute(String, String)}.
+     *
+     * @param attribute
+     *            the attribute name
+     * @param value
+     *            the token to look for
+     * @return this element query instance for chaining
+     *
+     * @see #withAttribute(String, String)
+     */
+    public ElementQuery<T> withAttributeContaining(String attribute, String value) {
+        attributes.add(new AttributeMatch(attribute, "~=", value));
+        return this;
+    }
+
+    /**
+     * Selects on elements not having the given attribute.
+     * <p>
+     *     Note, attributes both with and without values are skipped.
+     * </p>
+     *
+     * @param attribute
+     *            the attribute name
+     * @return this element query instance for chaining
+     */
+    public ElementQuery<T> withoutAttribute(String attribute) {
+        attributes.add(new AttributeMatch(attribute, "!", null));
+        return this;
+    }
+
+    /**
+     * Selects on elements not having the given attribute with the given value.
+     * <p>
+     * For skipping elements having a token within the attribute, see
+     * {@link #withoutAttributeContaining(String, String)}.
+     * </p>
+     *
+     * @param attribute
+     *            the attribute name
+     * @param value
+     *            the attribute value
+     * @return this element query instance for chaining
+     *
+     * @see #withoutAttributeContaining(String, String)
+     */
+    public ElementQuery<T> withoutAttribute(String attribute, String value) {
+        attributes.add(new AttributeMatch(attribute, "!=", value));
+        return this;
+    }
+
+    /**
+     * Selects on elements not having the given attribute containing the given token.
+     * <p>
+     * Compares with space separated tokens so that e.g.
+     * <code>withoutAttributeContaining("class", "myclass");</code> skips
+     * <code>class='someclass myclass'</code>.
+     * <p>
+     * For matching the full attribute value, see
+     * {@link #withoutAttribute(String, String)}.
+     *
+     * @param attribute
+     *            the attribute name
+     * @param value
+     *            the token to look for
+     * @return this element query instance for chaining
+     *
+     * @see #withoutAttribute(String, String)
+     */
+    public ElementQuery<T> withoutAttributeContaining(String attribute, String value) {
+        attributes.add(new AttributeMatch(attribute, "!~=", value));
+        return this;
+    }
+
+    /**
+     * Selects on elements having the given id.
+     * <p>
+     *     This selector does not require the id to be unique.
+     *     To obtain the unique id, chain with <code>{@link #single()}</code>
+     *     or use <code>{@link #id(String)}</code> instead of this selector.
+     *     If you legitimately have duplicate ids and just want the first one,
+     *     chain with <code>{@link #first()}</code>.
+     * </p>
+     *
+     * @param id
+     *            the id to look up
+     * @return the element with the given id
+     *
+     * @see #id(String)
+     * @see #single()
+     * @see #first()
+     */
+    public ElementQuery<T> withId(String id) {
+        return withAttribute("id", id);
+    }
+
+    /**
+     * Selects on elements having the given class names.
+     *
+     * @param classNames
+     *            the class names
+     * @return this element query instance for chaining
+     */
+    public ElementQuery<T> withClassName(String... classNames) {
+        Arrays.stream(classNames)
+                .forEach(className -> withAttributeContaining("class", className));
+        return this;
+    }
+
+    /**
+     * Selects on elements not having the given class names.
+     *
+     * @param classNames
+     *            the class names
+     * @return this element query instance for chaining
+     */
+    public ElementQuery<T> withoutClassName(String... classNames) {
+        Arrays.stream(classNames)
+                .forEach(className -> withoutAttributeContaining("class", className));
+        return this;
+    }
+
+    /**
+     * Selects on elements having the given theme.
+     *
+     * @param theme
+     *            the theme
+     * @return this element query instance for chaining
+     */
+    public ElementQuery<T> withTheme(String theme) {
+        return withAttribute("theme", theme);
+    }
+
+    /**
+     * Selects on elements not having the given theme.
+     *
+     * @param theme
+     *            the theme
+     * @return this element query instance for chaining
+     */
+    public ElementQuery<T> withoutTheme(String theme) {
+        return withoutAttribute("theme", theme);
     }
 
     /**
@@ -376,10 +576,10 @@ public class ElementQuery<T extends TestBenchElement> {
                         (Optional.ofNullable(hasLabel.getLabel())
                                 .filter(label -> comparison.test(label, text))
                                 .isPresent())) ||
-                ((element instanceof HasPlaceholder hasPlaceholder) &&
-                        (Optional.ofNullable(hasPlaceholder.getPlaceholder())
-                                .filter(placeholder -> comparison.test(placeholder, text))
-                                .isPresent())));
+                        ((element instanceof HasPlaceholder hasPlaceholder) &&
+                                (Optional.ofNullable(hasPlaceholder.getPlaceholder())
+                                        .filter(placeholder -> comparison.test(placeholder, text))
+                                        .isPresent())));
     }
 
     /**
@@ -502,6 +702,45 @@ public class ElementQuery<T extends TestBenchElement> {
     }
 
     /**
+     * Executes the search and returns an element having the given unique id.
+     * <p>
+     *     This selector expects the id to be unique.
+     *     If there are duplicate ids, this selector will
+     *     throw an exception. If you legitimately have duplicate ids,
+     *     use <code>{@link #withId(String)}.{@link #first()}</code> instead.
+     *     (Note, this alternate usage is the former behavior of this selector.)
+     * </p>
+     *
+     * @param id
+     *            the id to look up
+     * @return the element with the given id
+     *
+     * @throws NoSuchElementException
+     *             if no unique id element is found
+     *
+     * @see #withId(String)
+     * @see #first()
+     */
+    public T id(String id) {
+        return withId(id).single();
+    }
+
+    /**
+     * Executes the search and returns the sole result.
+     *
+     * @return The element of the type specified in the constructor
+     * @throws NoSuchElementException
+     *             if no unique element is found
+     */
+    public T single() {
+        List<T> all = all();
+        if (all.size() != 1) {
+            throw new NoSuchElementException(getNoSuchElementMessage(null, all.size()));
+        }
+        return all.get(0);
+    }
+
+    /**
      * Executes the search and returns the first result.
      *
      * @return The element of the type specified in the constructor
@@ -521,6 +760,10 @@ public class ElementQuery<T extends TestBenchElement> {
      * element is found or if 10 seconds has elapsed.
      *
      * @return The element of the type specified in the constructor
+     * @throws NoSuchElementException
+     *             if no element is found
+     *
+     * @see #first()
      */
     public T waitForFirst() {
         return waitForFirst(DEFAULT_WAIT_TIME_OUT_IN_SECONDS);
@@ -538,9 +781,13 @@ public class ElementQuery<T extends TestBenchElement> {
      *            timeout in seconds before this method throws a
      *            {@link NoSuchElementException} exception
      * @return The element of the type specified in the constructor
+     * @throws NoSuchElementException
+     *             if no element is found
+     *
+     * @see #first()
      */
     public T waitForFirst(long timeOutInSeconds) {
-        Object result = new WebDriverWait(getDriver(),
+        T result = new WebDriverWait(getDriver(),
                 Duration.ofSeconds(timeOutInSeconds)).until(driver -> {
                     try {
                         return first();
@@ -551,17 +798,9 @@ public class ElementQuery<T extends TestBenchElement> {
         if (result == null) {
             throw new NoSuchElementException(getNoSuchElementMessage(null));
         } else {
-            return (T) result;
+            return result;
         }
 
-    }
-
-    private WebDriver getDriver() {
-        if (getContext() instanceof WebDriver) {
-            return (WebDriver) getContext();
-        } else {
-            return ((TestBenchElement) getContext()).getDriver();
-        }
     }
 
     /**
@@ -594,8 +833,9 @@ public class ElementQuery<T extends TestBenchElement> {
         return elements.get(0);
     }
 
-    private String getNoSuchElementMessage(Integer index) {
-        String msg = "No element with tag <" + tagName + "> found";
+    private String getNoSuchElementMessage(Integer index, int foundCount) {
+        String msg = (foundCount == 0 ? "No element" : "Multiple elements (" + foundCount + ")") +
+                " with tag <" + tagName + "> found";
         String attrPairs = getAttributePairs();
         if (!attrPairs.isEmpty()) {
             msg += " with the attributes " + attrPairs;
@@ -603,7 +843,11 @@ public class ElementQuery<T extends TestBenchElement> {
         if (index != null) {
             msg += " using index " + index;
         }
-        return msg;
+        return msg + ".";
+    }
+
+    private String getNoSuchElementMessage(Integer index) {
+        return getNoSuchElementMessage(index, 0);
     }
 
     /**
@@ -626,6 +870,15 @@ public class ElementQuery<T extends TestBenchElement> {
         return executeSearch(null);
     }
 
+    private WebDriver getDriver() {
+        var context = getContext();
+        if (context instanceof WebDriver webDriver) {
+            return webDriver;
+        } else {
+            return ((TestBenchElement) context).getDriver();
+        }
+    }
+
     /**
      * Executes the search operation with the given conditions and returns a
      * list of matching elements.
@@ -637,16 +890,12 @@ public class ElementQuery<T extends TestBenchElement> {
      *         found
      */
     private List<T> executeSearch(Integer index) {
-        String indexSuffix = "";
-        if (index != null) {
-            indexSuffix = "[" + index + "]";
-        }
-
         StringBuilder script = new StringBuilder();
         TestBenchElement elementContext;
         JavascriptExecutor executor;
 
-        if (getContext() instanceof TestBenchElement) {
+        var context = getContext();
+        if (context instanceof TestBenchElement testBenchElement) {
             script.append("var result = [];" //
                     + "if (arguments[0].shadowRoot) {" //
                     + "  var shadow = arguments[0].shadowRoot.querySelectorAll(arguments[1]+arguments[2]);" //
@@ -656,26 +905,27 @@ public class ElementQuery<T extends TestBenchElement> {
                     + "result = result.concat(Array.prototype.slice.call(light));" //
                     + "return result" //
             );
-            elementContext = (TestBenchElement) getContext();
+            elementContext = testBenchElement;
             executor = elementContext.getCommandExecutor().getDriver();
-        } else if (getContext() instanceof WebDriver) {
+        } else if (context instanceof WebDriver webDriver) {
             // Search the whole document
             script.append("var result = [];" //
                     + "const queryResult = document.querySelectorAll(arguments[1]+arguments[2]);"
                     + "result = result.concat(Array.prototype.slice.call(queryResult));"
                     + "return result");
             elementContext = null;
-            executor = (JavascriptExecutor) getContext();
+            executor = (JavascriptExecutor) webDriver;
         } else {
-            if (getContext() == null) {
+            if (context == null) {
                 throw new IllegalStateException("Context cannot be null");
             } else {
                 throw new IllegalStateException("Unknown context type: "
-                        + getContext().getClass().getName());
+                        + context.getClass().getName());
             }
         }
-        if (indexSuffix != null) {
-            script.append(indexSuffix);
+
+        if (index != null) {
+            script.append("[").append(index).append("]");
         }
 
         return executeSearchScript(script.toString(), elementContext, tagName,
@@ -701,35 +951,29 @@ public class ElementQuery<T extends TestBenchElement> {
     static Set<AttributeMatch> getAttributes(
             Class<? extends TestBenchElement> elementClass) {
         Attribute[] attrs = elementClass.getAnnotationsByType(Attribute.class);
-        if (attrs == null) {
+        if (attrs.length == 0) {
             return Collections.emptySet();
         }
+
         Set<AttributeMatch> classAttributes = new HashSet<>();
         for (Attribute attr : attrs) {
-            String toMatch;
             if (!Attribute.DEFAULT_VALUE.equals(attr.value())) {
                 if (!Attribute.DEFAULT_VALUE.equals(attr.contains())) {
                     throw new RuntimeException(
                             "You can only define either 'contains' or 'value' for an @"
                                     + Attribute.class.getSimpleName());
                 }
-                String value;
-                if (attr.value().equals(Attribute.SIMPLE_CLASS_NAME)) {
-                    value = getClassConventionValue(elementClass);
-                } else {
-                    value = attr.value();
-                }
+                String value = attr.value().equals(Attribute.SIMPLE_CLASS_NAME)
+                        ? getClassConventionValue(elementClass)
+                        : attr.value();
                 // [label='my-text']
                 classAttributes
                         .add(new AttributeMatch(attr.name(), "=", value));
             } else if (!Attribute.DEFAULT_VALUE.equals(attr.contains())) {
                 // [class~='js-card-name']
-                String value;
-                if (attr.contains().equals(Attribute.SIMPLE_CLASS_NAME)) {
-                    value = getClassConventionValue(elementClass);
-                } else {
-                    value = attr.contains();
-                }
+                String value = attr.contains().equals(Attribute.SIMPLE_CLASS_NAME)
+                        ? getClassConventionValue(elementClass)
+                        : attr.contains();
                 classAttributes
                         .add(new AttributeMatch(attr.name(), "~=", value));
             } else {
@@ -771,21 +1015,20 @@ public class ElementQuery<T extends TestBenchElement> {
      * @return a list of matching elements of the type defined in the
      *         constructor
      */
+    @SuppressWarnings("unchecked")
     List<T> executeSearchScript(String script, Object context, String tagName,
-                                  String attributePairs, JavascriptExecutor executor) {
-        var result = executor.executeScript(script, context, tagName, attributePairs);
-
-        // Wrap as the correct type
-        if (result instanceof TestBenchElement testBenchElement) {
-            return List.of(TestBench.wrap(testBenchElement, elementClass));
-        } else if (result instanceof List<?> elements) {
-            return elements.stream()
-                    .filter(TestBenchElement.class::isInstance)
-                    .map(TestBenchElement.class::cast)
-                    .map(testBenchElement -> TestBench.wrap(testBenchElement, elementClass))
-                    .toList();
+            String attributePairs, JavascriptExecutor executor) {
+        Object result = executor.executeScript(script, context, tagName,
+                attributePairs);
+        if (result == null) {
+            return Collections.emptyList();
+        } else if (result instanceof TestBenchElement testBenchElement) {
+            return Collections.singletonList(TestBench.wrap(testBenchElement, elementClass));
         } else {
-            return List.of();
+            List<TestBenchElement> elements = (List<TestBenchElement>) result;
+            // Wrap as the correct type
+            elements.replaceAll(element -> TestBench.wrap(element, elementClass));
+            return (List<T>) elements;
         }
     }
 
